src/objects/UC_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Codes</relationshipLabel>
        <relationshipName>UC_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>UC Opportunities</relationshipLabel>
        <relationshipName>UC_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Universal_Code__c</fullName>
        <label>Universal Code</label>
        <referenceTo>Universal_Code__c</referenceTo>
        <relationshipLabel>UC Opportunities</relationshipLabel>
        <relationshipName>UC_Opportunities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>UC Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UC Opp-{0000000}</displayFormat>
        <label>UC Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UC Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>